engine/codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__error_event_oversized_input_snapshot.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
■ Message exceeds the maximum length of 1048576 characters (1048577 provided).
